--- a/cctbx/translation_search/notes.tex
+++ b/cctbx/translation_search/notes.tex
@@ -101,7 +101,7 @@ Then $C(x)$ can be expressed with the following 3 sums (those are equations (13)
 \label{meanIxIo}
 \end{equation}
 
-All those sums are over a discrete set of miller indices and they can therefore be computed by FFT. It should also be noted that~\ref{meanIx} and~\ref{meanIxIo} involve the same sums with different weights, a fact that is reflected in the cctbx code by handling those two cases with the same code (c.f. class \code{fast\_terms} in \code{cctbx/translation\_search/fast\_terms.h}). As noted by~\cite{J.Navaza:1995}, the fact those those quantities can be computed as FFT's result from choosing $F^2$ instead of $F$ in the least-squares target $Q$. Had we used the latter, we would have to deal with $\mean{|F_x|}$, which is is not a discrete trigonometric is sum, thus ending up with a correlation coefficient which cannot be computed by FFT.
+All those sums are over a discrete set of miller indices and they can therefore be computed by FFT. It should also be noted that~(\ref{meanIx}) and~(\ref{meanIxIo}) involve the same sums with different weights, a fact that is reflected in the cctbx code by handling those two cases with the same code (c.f. class \code{fast\_terms} in \code{cctbx/translation\_search/fast\_terms.h}). As noted by~\cite{J.Navaza:1995}, the fact those those quantities can be computed as FFT's result from choosing $F^2$ instead of $F$ in the least-squares target $Q$. Had we used the latter, we would have to deal with $\mean{|F_x|}$, which is is not a discrete trigonometric sum, thus ending up with a correlation coefficient which cannot be computed by FFT.
 
 If we know the space group, the set of symmetries can be taken as the space-group. The procedure is then only used to find the origin shift $x$. If we do not know the space-group, we can compute $C(x)$ for a set reduced to the identity and a symmetry element we want to test, and do that for all symmetry operators we wish to test.
 
