--- a/cctbx/translation_search/notes.tex
+++ b/cctbx/translation_search/notes.tex
@@ -1,26 +1,15 @@
 \documentclass[11pt]{article}
-\usepackage{geometry}                % See geometry.pdf to learn the layout options. There are lots.
-\geometry{a4paper}                   % ... or a4paper or a5paper or ... 
-%\geometry{landscape}                % Activate for for rotated page geometry
-%\usepackage[parfill]{parskip}    % Activate to begin paragraphs with an empty line rather than an indent
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{epstopdf}
-\usepackage{cctbx_notations}
-\DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
+\usepackage{cctbx_preamble}
 
 \title{Notes on the Fast Translation Function}
-\author{Luc J. Bourhis}
-\date{\today}                                           % Activate to display a given date or no date
+\author{\lucjbourhis}
+\date{\today}
 
 
 \bibliographystyle{plain}
 
 \begin{document}
 \maketitle
-%\section{}
-%\subsection{}
 
 These are an alternative, clearer derivation of the results in~\cite{J.Navaza:1995}.
 
