--- a/dox/cctbx_notations.sty
+++ b/dox/cctbx_notations.sty
@@ -1,6 +1,16 @@
-% some notations: convenience and centralised look
+% authors credentials
+\newcommand{\lucjbourhis}{Luc J. Bourhis\\(University of Durham, UK)}
+
+% references
+\newcommand{\refeq}[1]{eq.~(\ref{#1})}
+
+% programming
+\newcommand{\code}[1]{\texttt{#1}}
+\newcommand{\cctbx}{\code{cctbx}}
+
+% mathematical notations: convenience and centralised look
 \newcommand{\mean}[1]{\left\langle #1 \right\rangle}
 \newcommand{\modulus}[1]{\left| #1 \right|}
-\newcommand{\sym}[2]{\left( #1 \mid #2 \right)}
+\newcommand{\sym}[2]{\left( #1\,\vert\, #2 \right)}
 \newcommand{\cov}[2]{\mathrm{Cov}\left(#1,#2\right)}
-\newcommand{\code}[1]{\texttt{#1}}
+\newcommand{\fourier}[1]{\mathrm{FFT}\left[#1\right]}
