add reference to Lang's article about good use of coarser grids

--- a/dox/cctbx_references.bib
+++ b/dox/cctbx_references.bib
@@ -2,12 +2,36 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Luc Bourhis at 2008-09-11 13:23:00 +0200 
+%% Created for Luc Bourhis at 2008-09-30 22:14:00 +0200 
 
 
 %% Saved with string encoding Western (ISO Latin 1) 
 
 
+
+@article{Langs:2002,
+	Author = {Langs, D.A.},
+	Date-Added = {2008-09-30 22:12:30 +0200},
+	Date-Modified = {2008-09-30 22:13:58 +0200},
+	Journal = {J. Appl. Cryst.},
+	Pages = {505},
+	Title = {Elimination of minimal FFT grid-size limitations},
+	Volume = {35},
+	Year = {2002},
+	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
+HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
+dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
+GjSDRobHFdOUy5kYXRhgAVPEQFiAAAAAAFiAAIAAARaZXVzAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AADC2ioNSCsAAAAZxKwKa3MwMTM4LnBkZgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAABnFHsGbRrIAAAAAAAAAAAAEAAMAAAkgAAAAAAAAAAAAAA
+AAAAAACEFydGljbGVzABAACAAAwtoN7QAAABEACAAAwZs4ogAAAAEAEAAZxKwAGcR3ABLoHAAS3
+gcAAgAsWmV1czpVc2VyczpsdWM6RG9jdW1lbnRzOkFydGljbGVzOmtzMDEzOC5wZGYADgAWAAoA
+awBzADAAMQAzADgALgBwAGQAZgAPAAoABABaAGUAdQBzABIAJ1VzZXJzL2x1Yy9Eb2N1bWVudHM
+vQXJ0aWNsZXMva3MwMTM4LnBkZgAAEwABLwAAFQACAAr//wAA0h4fICFYJGNsYXNzZXNaJGNsYX
+NzbmFtZaMhIiNdTlNNdXRhYmxlRGF0YVZOU0RhdGFYTlNPYmplY3RfECkuLi8uLi8uLi8uLi9Eb
+2N1bWVudHMvQXJ0aWNsZXMva3MwMTM4LnBkZtIeHyYnoicjXE5TRGljdGlvbmFyeQAIABEAGgAf
+ACkAMgA3ADoAPwBBAFMAXABiAGkAcAB4AIMAhQCIAIoAjACPAJEAkwCdAKoArwC3ALkCHwIkAi0
+COAI8AkoCUQJaAoYCiwKOAAAAAAAAAgEAAAAAAAAAKAAAAAAAAAAAAAAAAAAAAps=}}
 
 @article{Clementi:1974,
 	Author = {Clementi, E. and Roetti, C.},
@@ -720,7 +744,6 @@ AAkQCUgJZAmIChQKKAo0AAAAAAAACAQAAAAAAAAAoAAAAAAAAAAAAAAAAAAACmg==},
 	Organization = {Dept. of Structural Chemistry, Univ. of G{\"o}ttingen},
 	Title = {The SHELXL-97 Manual},
 	Year = {1997},
-	Bdsk-Url-1 = {http://shelx.uni-ac.gwdg.de/SHELX/shelx.pdf},
 	Bdsk-File-1 = {YnBsaXN0MDDUAQIDBAUGCQpYJHZlcnNpb25UJHRvcFkkYXJjaGl2ZXJYJG9iamVjdHMSAAGGoNE
 HCFRyb290gAFfEA9OU0tleWVkQXJjaGl2ZXKoCwwXGBkdJCVVJG51bGzTDQ4PEBEUViRjbGFzc1
 dOUy5rZXlzWk5TLm9iamVjdHOAB6ISE4ACgAOiFRaABIAGWWFsaWFzRGF0YVxyZWxhdGl2ZVBhd
@@ -734,7 +757,8 @@ ydGljbGVzL3NoZWx4LnBkZgATAAEvAAAVAAIACv//AADSHh8gIVgkY2xhc3Nlc1okY2xhc3NuYW
 1loyEiI11OU011dGFibGVEYXRhVk5TRGF0YVhOU09iamVjdF8QKC4uLy4uLy4uLy4uL0RvY3VtZ
 W50cy9BcnRpY2xlcy9zaGVseC5wZGbSHh8mJ6InI1xOU0RpY3Rpb25hcnkACAARABoAHwApADIA
 NwA6AD8AQQBTAFwAYgBpAHAAeACDAIUAiACKAIwAjwCRAJMAnQCqAK8AtwC5AhsCIAIpAjQCOAJ
-GAk0CVgKBAoYCiQAAAAAAAAIBAAAAAAAAACgAAAAAAAAAAAAAAAAAAAKW}}
+GAk0CVgKBAoYCiQAAAAAAAAIBAAAAAAAAACgAAAAAAAAAAAAAAAAAAAKW},
+	Bdsk-Url-1 = {http://shelx.uni-ac.gwdg.de/SHELX/shelx.pdf}}
 
 @article{Didisheim:1987,
 	Author = {Didisheim, J.J. and Schwarzenbach, D.},
