some implementation details about miller.change_of_basis; consequently how to use it to implement a transform; fix some intermediate formulae in section 3.

--- a/cctbx/miller/transform_and_change_of_basis.tex
+++ b/cctbx/miller/transform_and_change_of_basis.tex
@@ -49,15 +49,44 @@ h' = h\sym{R}{t}.
 \end{equation}
 Indeed, since scalar product should be independent of the basis, $h'$ must statisfy $h'\Delta x' = h\Delta x$ for any vector $\Delta x'$ (as opposed to the point $x$\footnote{Let's not forget the positions make an affine space whereas the miller indices are only the reciprocal of the associated vector space and of course \refeq{change::of::basis::position} results in $\Delta x = R \Delta x'$}). The \cctbx\ implements this formula in C++ by operator overloading.
 
-In the previous section, we considered transforms where the old $x$ is moved onto the new $x'$ as $x' = \sym{R}{t} x$. Thus a change of basis $\sym{R}{t}$ corresponds to a transform $\sym{R}{t}^{-1}$. As a result, the \cctbx\ code handling a change of basis can trivially be used to generate a transform by simply passing as the change-of-basis operator the inverse of the transform we want.
+In the previous section, we considered transforms where the old $x$ is moved onto the new $x'$ as $x' = \sym{R}{t} x$. Thus a change of basis $\sym{R}{t}$ corresponds to a transform $\sym{R}{t}^{-1}$. As a result, it would seem that the \cctbx\ code handling a change of basis can trivially be used to generate a transform by simply passing as the change-of-basis operator the inverse of the transform we want. There is an implementation subtlety though discussed at the end of this section.
 
 Let us now work out the formula relating the structure factors before and after the change of basis. If $F(h)$ is the structure factor in the old basis, we will denote the structure factor in the new basis as $F'(h)$. With the remark in the previous paragraph,
 \begin{align}
 F'(h) &= F^{\sym{R}{t}^{-1}}(h) = F(hR^{-1}) e^{i2\pi h(-R^{-1}t)}\nonumber\\
 \intertext{and therefore}
-F'(hR) &= F(h)e^{-i2\pi ht}.
+F'(hR) &= F(h)e^{-i2\pi ht}. \label{change::basis::F}
 \end{align}
-That is the formula implemented in the \cctbx\ in \code{sym\_equiv.h}, c.f. \code{sym\_equiv\_index\linebreak[0]::phase\_eq} and it's use in \code{change\_basis.h}. It is particularly convenient since a \code{miller\linebreak[0].array} stores $h$ and $F(h)$ in two parallel arrays. By looping over the both of them at the same time, one can compute and immediately store the new miller index $hR$ and the value $F'$ for that new miller index.
+That is the formula implemented in the \cctbx\ in \code{sym\_equiv.h}, c.f. \code{sym\_equiv\_index\linebreak[0]::phase\_eq} and it's use in \code{change\_basis.h}. It is particularly convenient since a \code{miller\linebreak[0].array} stores $h$ and $F(h)$ in two parallel arrays. By looping over the both of them at the same time, one can compute and immediately store the new miller index $hR$ and the value $F'$ for that new miller index. However it means that the ordering of the original and new data are related as follow
+\begin{equation}
+\begin{CD}
+\ldots @. \ldots\\
+F(h_{i-1}) @= F'(h_{i-1}R)\\
+F(h_i) @= F'(h_iR)\\
+F(h_{i+1}) @= F'(h_{i+1}R)\\
+\ldots @. \ldots
+\end{CD}
+\label{miller::array::change::basis}
+\end{equation}
+
+That leads to a slight subtlety to implement a transform as discussed in section 1 with a change of basis. Indeed, most often we would like the memory layout
+\begin{equation}
+\begin{CD}
+\ldots @. \ldots\\
+F(h_{i-1}) @= F^{\sym{R}{t}}(h_{i-1})\\
+F(h_i) @= F^{\sym{R}{t}}(h_i)\\
+F(h_{i+1}) @= F^{\sym{R}{t}}(h_{i+1})\\
+\ldots @. \ldots
+\end{CD}
+\label{miller::array::transform}
+\end{equation}
+One must therefore, after computing the array of $F'(hR^{-1})$, put it back to have the miller indexes $h$ in the same order as the original array of $F(h)$. Fortunately, this is a one-liner in the \cctbx\ and the whole code reduces to:
+\begin{verbatim}
+# op is (R|t) and original is a miller.array
+transformed = original.change_of_basis(
+  sgtbx.change_of_basis(op.inverse())).common_set(original)
+\end{verbatim}
+
 
 \section{Symmetry cross-correlation: an application}
 
@@ -87,7 +116,7 @@ F(hR)e^{-i2\pi hRs}e^{i2\pi ht}e^{i2\pi hs}   @<<{\text{c.b. } \sym{I}{-s}}< F(h
 \end{equation*}
 So the transformes read
 \begin{align}
-\rho^\#(x) &= \rho(\sym{R}{t}^{-1}x + (I-R)s)\\
+\rho^\#(x) &= \rho(\sym{R}{t}^{-1}(x - (I-R)s))\\
 F^\#(h) &= F^{\sym{R}{t}}(h) e^{i2\pi h(I-R)s} \label{translation::search::F}
 \end{align}
 Let us therefore introduce
@@ -98,27 +127,28 @@ d = (I-R)s. \label{def::d}
 How to compare $\rho$ and $\rho^\#$ ? One possibility is to compute their overlap
 \begin{align}
 C(s) &= \int_U \rho(x) \rho^\#(x) d^3x  \label{cross::correlation::rho::s}\\
-&= \int_U \rho(x) \rho(\sym{R}{t}^{-1}x + d)d^3x = CC(d). \label{cross::correlation::rho::d}
+&= \int_U \rho(x) \rho(\sym{R}{t}^{-1}(x - d))d^3x = CC(d). \label{cross::correlation::rho::d}
 \end{align}
 $CC$ is therefore the cross-correlation%
-\footnote{The cross-correlation between any density $\rho_1$ and $\rho_2$ is defined as
+\footnote{The cross-correlation of $\rho_1$ with $\rho_2$ is defined as
 \begin{align}
-CC(d) &= \int \rho_1(x) \rho_2(x+d)d^3x \\
+CC(d) &= \int \rho_1(x) \rho_2(x+d)d^3x = \int \rho_1(x-d) \rho_2(x) d^3x \\
 \intertext{i.e.}
-CC &= \rho_1(x) * \rho_2(-x) = \rho_1(-x) * \rho_2(x)
+CC &= \rho_1(-x) * \rho_2(x)
 \end{align}
-where $*$ denotes the convolution.} 
-between $\rho$ and $\rho^{\sym{R}{t}}$.
+where $*$ denotes the convolution. It should be noted that the cross-correlation of $\rho_2$ with $\rho_1$ is not equal to the cross-correlation of $\rho_1$ with $\rho_2$.} 
+of $\rho^{\sym{R}{t}}$ with $\rho$.
 The goal is now to find the value of $d$ which maximises $CC(d)$, the idea being that the bigger the overlap, the more similar the density and its transform must be. There are two problems here:
 \begin{itemize}
-\item first, we want to compute $s$, not $d$ but in all practical cases $I-R$ is not invertible and therefore \refeq{def::d} does not have an unique solution; but at least we can determine all of them;
+\item first, we want to compute $s$, not $d$ but in all practical cases $R-I$ is not invertible and therefore \refeq{def::d} does not have an unique solution; but at least we can determine all of them;
 \item then, in practice we only have a sample of $\rho$ on a grid; thus the computation of the overlap integral scales like the number of point on the grid and then we need to compute it for $d$ spanning the grid; thus this is an $O(n^2)$ algorithm.
 \end{itemize}
 But since $CC$ is a convolution, we can compute it using Fast Fourier Transform,
+\newcommand{\tmp}{F(h)\overline{F^{\sym{R}{t}}(h)}}
 \begin{equation}
-CC = \fourier{F(h)\overline{F^{\sym{R}{t}}(h)}}\label{CC:as::FFT}
+CC = \fourier{\tmp}\label{CC:as::FFT}
 \end{equation}
-where the bar denotes complex conjugation. Now the computation of all the $F(h)\overline{F^{\sym{R}{t}}(h)}$ is $O(n)$ whereas the FFT is $O(n\log n)$ which results in a dramatic improvement.
+where the bar denotes complex conjugation. Now the computation of all the $\tmp$ is $O(n)$ whereas the FFT is $O(n\log n)$ which results in a dramatic improvement.
 
 Remark: we could have arrived at \refeq{CC:as::FFT} in a different way,
 \begin{align}
